task3/postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-demo
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
          name: postgredb
        volumeMounts:
        - mountPath: /var/lib/postgsql/data
          name: postgres-volume
      volumes:
      - name: postgres-volume
        hostPath:
          path: /home/roma/data
          type: Directory
