task3/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task3-ingress
spec:
  rules:
    - host: sa.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 8080
    - host: api.sa.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
